--- a/hextechhunt-client/css/main.css
+++ b/hextechhunt-client/css/main.css
@@ -49,10 +49,25 @@ footer {
   color: white;
   font-size: 1.5rem;
   padding: 5px;
-  width: 20%;
+  width: 30%;
 }
 
 .input-field:focus {
+  border: 1px #1D2C8B solid;
+}
+
+.select-dropdown {
+  appearance: none;
+  background-color: #3B3B3B;
+  border-radius: none;
+  border: 1px black solid;
+  box-shadow: none;
+  color: white;
+  font-size: 1.4rem;
+  padding: 5px;
+}
+
+.select-dropdown:focus {
   border: 1px #1D2C8B solid;
 }
 
