--- a/hextechhunt-client/css/main.css
+++ b/hextechhunt-client/css/main.css
@@ -12,6 +12,12 @@ body {
   width: 70%;
 }
 
+.error-text {
+  color: #E14E4E;
+  font-size: 1.2rem;
+  padding: 1em;
+}
+
 footer {
   background: black;
   bottom: 0px;
