Implemented Champion Mastery and Champion API calls

--- a/hextechhunt-client/views/results/results.html
+++ b/hextechhunt-client/views/results/results.html
@@ -8,3 +8,5 @@
   <p class="clear-left"></p>
   <button class="float-right search-another-button" data-ng-click="returnToSearch()">Search another Summoner</button>
 </div>
+<div>
+</div>
