--- a/hextechhunt-client/css/main.css
+++ b/hextechhunt-client/css/main.css
@@ -1,3 +1,10 @@
+.app-logo {
+  font-family: 'Audiowide', sans-serif;
+  font-size: 4rem;
+  margin-top: 1.35em;
+  text-shadow: 2px 2px #1D2C8B;
+}
+
 body {
   background-color: black;
   background-image: url('../images/hextech-annie-background.jpg');
@@ -38,7 +45,7 @@ header img {
   padding-right: 10px;
 }
 
-.header-icons {
+.header-bar {
   padding-top: 10px;
   text-align: right;
 }
@@ -63,13 +70,6 @@ footer {
   padding-top: 10px;
   position: fixed;
   width: 100%;
-}
-
-.header-text {
-  font-family: 'Audiowide', sans-serif;
-  font-size: 4rem;
-  margin-top: 1.5em;
-  text-shadow: 2px 2px #1D2C8B;
 }
 
 .input-field {
@@ -148,7 +148,12 @@ footer {
   border: 1px #1D2C8B solid;
 }
 
+.sub-header-container {
+  margin-left: auto;
+  margin-right: auto;
+  width: 80%;
+}
+
 .sub-header-text {
   font-size: 1.5rem;
-  font-weight: 300;
 }
