--- a/hextechhunt-client/views/search/search.html
+++ b/hextechhunt-client/views/search/search.html
@@ -2,9 +2,9 @@
   <!-- Brief application description -->
   <div class="sub-header-container">
     <p class="sub-header-text">
-      A new and more comprehensive way to see how you are doing with mastering your favorite Champions and collecting Hextech Chests.
+      A different way to see how you are doing with mastering your favorite Champions and collecting Hextech Chests.
       HextechHunt will let you know which Champions have done the honor of rewarding you with a Hextech Chest, which Champions hold great potential to reward
-      you with a Chest, and which Champions are still on the journey towards Mastery.</p>
+      you with a Chest, and which Champions are still on the journey towards Mastery for the current season.</p>
     <br>
     <p class="sub-header-text">Enter your Summoner name and select your Region below to view your progress.</p>
   </div>
