Added canvas loader for HTTP requests and included http-server to the client for standalone usage

--- a/hextechhunt-client/css/main.css
+++ b/hextechhunt-client/css/main.css
@@ -19,6 +19,12 @@ body {
   width: 70%;
 }
 
+.canvas-loader-wrapper {
+  left: 50%;
+  position: absolute;
+  top: 45%;
+}
+
 .centered {
   text-align: center;
 }
