--- a/hextechhunt-client/views/results/results.html
+++ b/hextechhunt-client/views/results/results.html
@@ -12,11 +12,18 @@
 <br>
 <div class="results-hextech-key">
   <img class="vertical-align-image" src="images/checkmark.png" height="30" width="30"><span>&nbsp;&nbsp;Hextech Chest acquired.&nbsp;&nbsp;&nbsp;&nbsp;</span>
-  <img class="vertical-align-image" src="images/x.png" height="30" width="30"><span>&nbsp;&nbsp;Hextech Chest not acquired.&nbsp;&nbsp;&nbsp;&nbsp;</span>
+  <br>
   <img class="vertical-align-image" src="images/asterisk.png" height="30" width="30"><span>&nbsp;&nbsp;Hextech Chest not acquired, but the potential to earn one looks high.</span>
+  <br>
+  <img class="vertical-align-image" src="images/x.png" height="30" width="30"><span>&nbsp;&nbsp;Hextech Chest not acquired.&nbsp;&nbsp;&nbsp;&nbsp;</span>
 </div>
 <br>
 <br>
+
+<div class="results-hextech-filters">
+  <input class="input-field-2" type="text" placeholder="Search for Champion" data-ng-model="championName">
+</div>
+
 <table class="results-hextech-table">
   <tr>
     <th class="results-hextech-header-col left-align">Champion</th>
@@ -25,7 +32,7 @@
     <th class="results-hextech-header-col centered">Highest Grade</th>
     <th class="results-hextech-header-col centered">Hextech Chest</th>
   </tr>
-  <tr class="results-hextech-row" ng-repeat="championMastery in championMasteryResults">
+  <tr class="results-hextech-row" ng-repeat="championMastery in championMasteryResults | filter: championName">
     <td><img class="vertical-align-image" data-ng-src="{{ championMastery.championIconSrc }}" height="50" width="50">
       <span class="results-hextech-champion-name">{{ championMastery.championName }}</span>
     </td>
