Adjusted About view

--- a/hextechhunt-client/views/about/about.html
+++ b/hextechhunt-client/views/about/about.html
@@ -1,8 +1,9 @@
 <div class="sub-header-container centered">
-  <p class="sub-header-text">Version 0.0.1</p>
-  <p class="sub-header-text">Designed and developed by Adrian Baran (ADR V1).</p>
-  <p class="sub-header-text">For more information on the application, including the technologies used, the architecture, my experiences while developing, and
-    the code itself, please check out the <a href="https://github.com/abaran30/hextechhunt">GitHub</a>.</p>
+  <p class="sub-header-text">Version 0.0.1 :')</p>
+  <br>
+  <p class="sub-header-text">Designed and developed by Adrian Baran.</p>
+  <p class="sub-header-text">Details about the application and more can be found in the <a href="https://github.com/abaran30/hextechhunt">GitHub</a>.</p>
+  <br>
   <p class="sub-header-text">Cheers!</p>
   <button class="search-button" data-ng-click="returnToSearch()">Back</button>
 </div>
