--- a/hextechhunt-client/views/search.html
+++ b/hextechhunt-client/views/search.html
@@ -3,7 +3,7 @@
   <!-- Brief application description -->
   <div class="sub-header-container">
     <p class="sub-header-text">
-      A different way to see how you are doing with mastering your favorite Champions and collecting Hextech Chests.
+      A simple way to see how you are doing with mastering your favorite Champions and collecting Hextech Chests.
       HextechHunt will let you know which Champions have done the honor of rewarding you with a Hextech Chest, which Champions hold great potential to reward
       you with a Chest, and which Champions are still on the journey towards Mastery for the current season.</p>
     <br>
