--- a/hextechhunt-client/css/main.css
+++ b/hextechhunt-client/css/main.css
@@ -1,3 +1,7 @@
+/*
+ * The CSS below is ordered alphabetically by element/ID/class
+ */
+
 a:link {
   color: #1D2C8B;
   font-weight: bold;
@@ -17,11 +21,11 @@ a:visited {
 }
 
 body {
+  background-attachment: fixed;
   background-color: black;
   background-image: url('../images/hextech-annie-background.jpg');
-  background-repeat: no-repeat;
-  background-attachment: fixed;
   background-position: top center;
+  background-repeat: no-repeat;
   color: white;
   font-family: 'Roboto', sans-serif;
   margin-bottom: 100px;
@@ -128,14 +132,14 @@ footer {
   padding-left: 0.5em;
 }
 
-.results-hextech-header-col {
-  font-size: 1.25rem;
-}
-
 .results-hextech-filters {
   margin-left: auto;
   margin-right: auto;
   width: 85%;
+}
+
+.results-hextech-header-col {
+  font-size: 1.25rem;
 }
 
 .results-hextech-key {
