--- a/hextechhunt-client/views/about.html
+++ b/hextechhunt-client/views/about.html
@@ -1,9 +1,12 @@
 <div class="sub-header-container centered">
+  <!-- Some information on the application; including version number, author, and GitHub link -->
   <p class="sub-header-text">Version 0.0.1</p>
   <br>
   <p class="sub-header-text">Designed and developed by Adrian Baran.</p>
   <p class="sub-header-text">Details about the application and more can be found in the <a href="https://github.com/abaran30/hextechhunt">GitHub</a>.</p>
   <br>
   <p class="sub-header-text">Cheers!</p>
+
+  <!-- Back button to return the user to the Home (Search) view -->
   <button class="search-button" data-ng-click="returnToSearch()">Back</button>
 </div>
