Made the About view button take the user to the previous page instead of Home (Search), added feedback mechanism for Search error message, and adjusted README

--- a/hextechhunt-client/views/about.html
+++ b/hextechhunt-client/views/about.html
@@ -8,5 +8,5 @@
   <p class="sub-header-text">Cheers!</p>
 
   <!-- Back button to return the user to the Home (Search) view -->
-  <button class="search-button" data-ng-click="returnToSearch()">Back</button>
+  <button class="search-button" data-ng-click="goBack()">Back</button>
 </div>
