More code/comment clean-up and adjusted README

--- a/hextechhunt-client/css/main.css
+++ b/hextechhunt-client/css/main.css
@@ -1,5 +1,5 @@
 /*
- * The CSS below is ordered alphabetically by element/ID/class
+ * The CSS below is ordered alphabetically by class/element/ID
  */
 
 a:link {
