--- a/hextechhunt-client/views/about.html
+++ b/hextechhunt-client/views/about.html
@@ -7,6 +7,6 @@
   <br>
   <p class="sub-header-text">Cheers!</p>
 
-  <!-- Back button to return the user to the Home (Search) view -->
+  <!-- Back button to return the user to the previous view -->
   <button class="search-button" data-ng-click="goBack()">Back</button>
 </div>
