Adjusted 'potential' prediction, brief app description in the Search view, and added link to Hextech Crafting Guide in Result view

--- a/hextechhunt-client/views/results.html
+++ b/hextechhunt-client/views/results.html
@@ -33,6 +33,12 @@
       one looks high.</span>
     <br>
     <img class="vertical-align-image" src="images/x.png" height="30" width="30"><span>&nbsp;&nbsp;Hextech Chest not acquired.</span>
+
+    <!-- Link to Hextech Crafting Guide (Riot Games Support) in case the results cause any bit of confusion -->
+    <p>Something not making sense? See the
+      <a href="https://support.riotgames.com/hc/en-us/articles/207884233-Hextech-Crafting-Guide">Hextech Crafting Guide</a>
+      for general information and FAQs.
+    </p>
   </div>
   <br>
   <br>
