--- a/hextechhunt-client/views/search.html
+++ b/hextechhunt-client/views/search.html
@@ -4,7 +4,7 @@
   <div class="sub-header-container">
     <p class="sub-header-text">
       A simple way to see how you are doing with mastering your favorite Champions and collecting Hextech Chests.
-      HextechHunt will let you know which Champions have done the honor of rewarding you with a Hextech Chest (from either yourself or a teammate), which
+      HextechHunt will let you know which Champions have done the honor of rewarding you with a Hextech Chest (by either yourself or a teammate), which
       Champions hold great potential to reward you with a Chest, and which Champions are still on the journey towards Mastery for the current season.</p>
     <br>
     <p class="sub-header-text">Enter your Summoner name and select your Region below to view your progress.</p>
